@@ -1,1 +1,1 @@
-Search.setIndex({objects:{"mnemosyne.libmnemosyne":{render_chain:[3,0,1,""]},"mnemosyne.libmnemosyne.render_chain.RenderChain":{filter:[3,1,1,""],component_type:[3,3,1,""],unregister_filter:[3,1,1,""],register_filter:[3,1,1,""],register_filter_at_front:[3,1,1,""],register_filter_at_back:[3,1,1,""],renderers:[3,3,1,""],render_question:[3,1,1,""],filters:[3,3,1,""],renderer_for_card_type:[3,1,1,""],render_answer:[3,1,1,""],register_renderer:[3,1,1,""],id:[3,3,1,""],unregister_renderer:[3,1,1,""]},"mnemosyne.libmnemosyne.render_chain":{RenderChain:[3,2,1,""]}},terms:{represent:[1,3],all:1,code:1,frontend:1,chain:3,text:[1,3],register_filter_at_back:3,rest:1,detail:[1,3],front:3,through:[1,3],in_front:3,flexibl:1,mnemosyn:3,absolut:1,how:1,configur:[1,4],activ:1,should:3,add:[1,3],program:1,swap:1,schedul:1,stopwatch:1,renderer_for_card_typ:3,logger:1,easier:1,sent:[1,3],render_arg:3,them:1,liter:[0,2,3,4,5,6,7],string:3,get:[1,3],handl:1,mention:1,logupload:[1,5],renderer_class:3,"import":3,veri:3,span:[0,2,3,4,5,6,7],name:3,recip:1,like:[1,3],specif:[1,3],level:1,docutil:[0,2,3,4,5,6,7],gui:1,list:[1,3],collect:1,either:[1,3],each:1,unregister_render:3,where:1,side:1,mean:3,set:1,renderchain:[1,3],back:3,"export":[1,3],pass:1,out:1,index:1,shown:1,render_chain:3,databas:1,review:1,particip:1,content:1,recognit:1,written:1,won:1,suitabl:[1,3],rel:[1,3],"new":[1,3],statist:1,run:3,deriv:1,gener:1,contain:[1,3],standard:1,path:[1,3],sinc:1,valu:1,convert:1,actual:1,plugin:[7,3,1],register_filter_at_front:3,foreign:1,filter:[1,3],etc:1,integr:1,logic:1,fals:3,mani:[1,3],chang:1,filter_class:3,fileformat:[1,0],first:[1,3],oper:[1,3],pre:[0,2,3,4,5,6,7],writer:[1,3],render:[1,3],extra:1,appli:1,modul:1,independ:1,number:1,two:1,hook:1,alreadi:3,componentmanag:1,storag:1,unit:1,differ:1,from:[1,3],wai:1,associ:1,question:[1,3],three:1,reviewcontrol:1,register_render:3,compon:1,call:1,card:[1,3],basic:1,overview:1,instanc:3,type:[1,3],more:1,field:1,form:[1,3],relat:1,search:1,link:1,translat:1,pronunci:1,tagtre:[1,2],repetit:1,mechan:1,word:1,consist:1,component_manag:3,"default":3,work:1,displai:[1,3],can:[1,3],browser:[1,3],control:1,layer:1,file:[1,3],process:1,certain:1,"abstract":1,toolkit:1,indic:1,cardtypeconvert:1,raw:[1,3],tag:1,right:[1,3],point:1,tabl:1,need:[1,3],doe:3,libmnemosyn:[1,3],assembl:[1,3],alwai:1,want:3,perform:[1,3],make:1,factview:1,same:1,write:1,also:1,other:[1,3],criterion:1,sever:1,which:[1,3],regist:3,answer:[1,3],instead:3,card_typ:3,render_answ:3,determin:1,normal:1,component_typ:3,"class":[0,2,3,4,5,6,7],after:3,befor:[1,3],render_quest:3,data:[1,3],typic:1,expand:[1,3],latex:1,unregister_filt:3,statisticspag:[6,1],page:1,criterionappli:1,register_filt:3,inform:1,cardtyp:1,exampl:1,thi:[1,3],time:[1,3],activitycriterion:1,order:[1,3],fact:1},objtypes:{"0":"py:module","1":"py:method","2":"py:class","3":"py:attribute"},titles:["<tt class=\"docutils literal\"><span class=\"pre\">FileFormat</span></tt>","Libmnemosyne overview","<tt class=\"docutils literal\"><span class=\"pre\">TagTree</span></tt>","<tt class=\"docutils literal\"><span class=\"pre\">RenderChain</span></tt>","<tt class=\"docutils literal\"><span class=\"pre\">Configuration</span></tt>","<tt class=\"docutils literal\"><span class=\"pre\">LogUploader</span></tt>","<tt class=\"docutils literal\"><span class=\"pre\">StatisticsPage</span></tt>","<tt class=\"docutils literal\"><span class=\"pre\">Plugin</span></tt>"],objnames:{"0":["py","module","Python module"],"1":["py","method","Python method"],"2":["py","class","Python class"],"3":["py","attribute","Python attribute"]},filenames:["modules/file_format","index","modules/tag_tree","modules/render_chain","modules/configuration","modules/log_uploader","modules/statistics_page","modules/plugin"]})
+Search.setIndex({objects:{"mnemosyne.libmnemosyne":{render_chain:[3,0,1,""]},"mnemosyne.libmnemosyne.render_chain.RenderChain":{render_answer:[3,1,1,""],component_type:[3,3,1,""],unregister_filter:[3,1,1,""],register_filter:[3,1,1,""],register_filter_at_front:[3,1,1,""],register_filter_at_back:[3,1,1,""],renderers:[3,3,1,""],render_question:[3,1,1,""],filters:[3,3,1,""],renderer_for_card_type:[3,1,1,""],id:[3,3,1,""],register_renderer:[3,1,1,""],filter:[3,1,1,""],unregister_renderer:[3,1,1,""]},"mnemosyne.libmnemosyne.render_chain":{RenderChain:[3,2,1,""]}},terms:{represent:[1,3],all:1,code:1,frontend:1,chain:3,from:[1,3],text:[1,3],register_filter_at_back:3,rest:1,factview:1,front:3,through:[1,3],flexibl:1,mnemosyn:3,absolut:1,how:1,configur:[1,4],activ:1,should:3,add:[1,3],program:1,swap:1,appli:1,stopwatch:1,renderer_for_card_typ:3,logger:1,easier:1,sent:[1,3],render_arg:3,them:1,liter:[0,2,3,4,5,6,7],string:3,get:[1,3],handl:1,mention:1,logupload:[1,5],renderer_class:3,"import":3,veri:3,name:3,recip:1,like:[1,3],specif:[1,3],level:1,docutil:[0,2,3,4,5,6,7],gui:1,list:[1,3],collect:1,statist:1,contain:[1,3],unregister_render:3,where:1,side:1,mean:3,set:1,renderchain:[1,3],back:3,"export":[1,3],pass:1,out:1,index:1,shown:1,render_chain:3,databas:1,review:1,particip:1,content:1,recognit:1,written:1,won:1,suitabl:[1,3],rel:[1,3],"new":[1,3],order:[1,3],either:[1,3],run:3,deriv:1,gener:1,each:1,standard:1,path:[1,3],sinc:1,valu:1,convert:1,actual:1,plugin:[7,3,1],register_filter_at_front:3,foreign:1,filter:[1,3],etc:1,integr:1,logic:1,fals:3,mani:[1,3],chang:1,browser:[1,3],fileformat:[1,0],first:[1,3],oper:[1,3],control:1,writer:[1,3],render:[1,3],extra:1,schedul:1,modul:1,independ:1,number:1,three:1,hook:1,alreadi:3,componentmanag:1,storag:1,unit:1,differ:1,span:[0,2,3,4,5,6,7],wai:1,data:[1,3],question:[1,3],two:1,reviewcontrol:1,register_render:3,compon:1,call:1,card:[1,3],basic:1,overview:1,type:[1,3],more:1,field:1,form:[1,3],relat:1,search:1,link:1,translat:1,pronunci:1,tagtre:[1,2],repetit:1,word:1,consist:1,component_manag:3,"default":3,work:1,displai:[1,3],can:[1,3],in_front:3,other:[1,3],typic:1,filter_class:3,pre:[0,2,3,4,5,6,7],layer:1,file:[1,3],process:1,certain:1,"abstract":1,toolkit:1,indic:1,cardtypeconvert:1,raw:[1,3],tag:1,right:[1,3],point:1,tabl:1,need:[1,3],libmnemosyn:[1,3],assembl:[1,3],alwai:1,want:3,perform:[1,3],make:1,criterionappli:1,detail:[1,3],same:1,write:1,also:1,instanc:3,criterion:1,sever:1,which:[1,3],regist:3,answer:[1,3],instead:3,card_typ:3,render_answ:3,thi:[1,3],normal:1,component_typ:3,after:3,befor:[1,3],activitycriterion:1,render_quest:3,associ:1,"class":[0,2,3,4,5,6,7],expand:[1,3],latex:1,unregister_filt:3,page:1,doe:3,register_filt:3,inform:1,cardtyp:1,exampl:1,determin:1,time:[1,3],mechan:1,statisticspag:[6,1],fact:1},objtypes:{"0":"py:module","1":"py:method","2":"py:class","3":"py:attribute"},titles:["<tt class=\"docutils literal\"><span class=\"pre\">FileFormat</span></tt>","Libmnemosyne overview","<tt class=\"docutils literal\"><span class=\"pre\">TagTree</span></tt>","<tt class=\"docutils literal\"><span class=\"pre\">RenderChain</span></tt>","<tt class=\"docutils literal\"><span class=\"pre\">Configuration</span></tt>","<tt class=\"docutils literal\"><span class=\"pre\">LogUploader</span></tt>","<tt class=\"docutils literal\"><span class=\"pre\">StatisticsPage</span></tt>","<tt class=\"docutils literal\"><span class=\"pre\">Plugin</span></tt>"],objnames:{"0":["py","module","Python module"],"1":["py","method","Python method"],"2":["py","class","Python class"],"3":["py","attribute","Python attribute"]},filenames:["modules/file_format","index","modules/tag_tree","modules/render_chain","modules/configuration","modules/log_uploader","modules/statistics_page","modules/plugin"]})
